@@ -8,6 +8,7 @@
 * Improved output of SystemCreator class.
 * Added new simulated system to SimulationGrapher.
 * Added methods to measure step calculation time.
+* Added StartDialog to Viewer client.
 
 SphereSim 2.4.2:
 * Improved simulated system.
